<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/shape_item_background"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:theme="@style/titleStyle"
        android:id="@+id/txt_title"/>

    <TextView
        android:layout_below="@id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:theme="@style/dateStyle"
        android:id="@+id/txt_date"/>

    <TextView
        android:layout_below="@id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_address"
        android:theme="@style/addressStyle"
        android:text="@string/address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_info"
        android:theme="@style/infoStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/info"/>

</RelativeLayout>