<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/shape_item_background"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stakeholder"
        android:theme="@style/titleStyle"
        android:id="@+id/txt_name"/>

    <TextView
        android:layout_below="@id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:theme="@style/dateStyle"
        android:id="@+id/txt_phone"/>

    <TextView
        android:layout_below="@id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_address"
        android:theme="@style/addressStyle"
        android:text="@string/address"/>

</RelativeLayout>