<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/shape_header">

        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:theme="@style/nameStyle"/>

        <TextView
            android:layout_below="@id/txt_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_email"
            android:text="@string/Email"
            android:theme="@style/emailStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_role"
            android:text="@string/role"
            android:theme="@style/roleStyle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/header"
        android:id="@+id/rv_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_order"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:src="@drawable/ic_baseline_add_24"/>

    <View
        android:id="@+id/view_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress"/>

</RelativeLayout>